Let the input field glow

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,7 +5,7 @@
   </h1>
 </div>
 
-<input [(ngModel)]="keyword" type="text" placeholder="Enter your search terms" />
+<input class="search" [(ngModel)]="keyword" type="text" placeholder="Enter your search terms" />
 
 
 <quotes [keyword]="keyword" [quotes]="quotes"> </quotes>
