--- a/src/app/about/about.component.css
+++ b/src/app/about/about.component.css
@@ -1,10 +1,8 @@
 
-h1 {
-  text-align: center;
-}
-
-h3 {
-  margin: 10px 30px;
+.about {
+  font-size: 24px;
+  margin: 30px;
+  padding: 5px 0px;
 }
 
 a {
