--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,13 @@
-<!--The content below is only a placeholder and can be replaced.-->
-<div style="text-align:center">
-  <h1>
-    {{ title }}
-  </h1>
-</div>
 
-<input class="search" [(ngModel)]="keyword" type="text" placeholder="Enter your search terms" />
+<h1>
+  {{ title }}
+</h1>
 
+<h3>
+  <a routerLink="search" routerLinkActive="active-link"> Search </a> |
+  <a routerLink="random" routerLinkActive="active-link"> Random </a> |
+  <a routerLink="about" routerLinkActive="active-link"> About </a>
+</h3>
 
-<quotes [keyword]="keyword" [quotes]="quotes"> </quotes>
+<router-outlet></router-outlet>
+
