Extract Quote service

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,7 +1,14 @@
 
 <div class="about">
   <p>
-    Small Angular app for investigating quotes
+    Small Angular app for investigating quotes of wise men and great philosophers
+  </p>
+
+  <p>
+    Try:
+    <a href="search?q=Sartre">Sartre</a>,
+    <a href="search?q=Confucius">Confucius</a>,
+    or <a href="search?q=Plato">Plato</a>
   </p>
 
   <p>
