--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,7 +1,7 @@
 
 <div class="about">
   <p>
-    Small Angular app for investigating quotes of wise men and great philosophers
+    Small Angular app for investigating quotes of wise men, old philosophers and great minds
   </p>
 
   <p>
