Add more quotes
(and fix existing ones)

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -8,6 +8,7 @@
     Try:
     <a href="search?q=Sartre">Sartre</a>,
     <a href="search?q=Confucius">Confucius</a>,
+    <a href="search?q=Horace">Horace</a>,
     or <a href="search?q=Plato">Plato</a>
   </p>
 
