--- a/src/app/tag/cloud.component.html
+++ b/src/app/tag/cloud.component.html
@@ -1,6 +1,6 @@
 
 <ul class="cloud">
   <li *ngFor="let tag of tags" class={{tagClass(tag)}}>
-    <a href="/search?q={{tag}}">{{ tag }}</a>
+    <a href="search?q={{tag}}">{{ tag }}</a>
   </li>
 </ul>
