Change from Twitter to Mastodon

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -13,6 +13,6 @@
   </p>
 
   <p>
-    Made in Berlin by <a href="https://twitter.com/jofr">@jofr</a>
+    Made in Berlin by <a href="https://ruby.social/@jofr">@jofr</a>
   </p>
 </div>
